--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,5 +1,6 @@
 <div class='btn-group-vertical nav-collapse'>
 	<button class='btn btn-default' type='button' onclick="window.location.href='<%= items_path %>'" > Items </button>
   <button class='btn btn-default' type='button' onclick="window.location.href='<%= customers_path %>'" > Customers </button>
+  <button class='btn btn-default' type='button' onclick="window.location.href='<%= orders_path %>'" > Orders </button>
 	<button class='btn btn-default' type='button' onclick="window.location.href='<%= users_path %>'" > Gente </button>
 </div>
